<resources>
    <string name="app_name">FimeFit</string>
    <string name="invitation">¿Hasta que nivel seras capaz de llegar?</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesion</string>
    <string name="resetPassword">Enviar Contraseña</string>
    <string name="acept">He leido y acepto los</string>
    <string name="terms">terminos y condiciones de uso.</string>
    <string name="empty_email">Introduce un email porfavor.</string>
    <string name="invalid_email">El email es incorrecto.</string>
    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="googleWebClientId">190446821096-e493pt0i720f6e859f1ok1n33v213lk1.apps.googleusercontent.com</string>
    <string name="bar_title">FimeFit</string>
    <string name="alertActivationGPSTitle">Permitir acceso a ubicación</string>
    <string name="alertActivationGPSDescription">Si desea obtener datos de su carrera como la distancia recorrida y la velocidad debe activar el GPS</string>
    <string name="ignoreActivationGPS">Ignorar</string>
    <string name="aceptActivationGPS">Activar</string>
    <string name="menu_running">Running</string>
    <string name="menu_record">Historial</string>
    <string name="menu_becomepremium">Hazte Premium</string>
    <string name="menu_clearpreferences">Reestablecer Ajustes</string>
    <string name="menu_signout">Cerrar Sesion</string>
    <string name="menu_offercourse">¿Quieres aprender a desarrollar apps? Entra aqui</string>
    <string name="terms_button">Acepto los terminos y condiciones</string>
    <string name="user">luisrcparra@gmail.com</string>
    <string name="nav_hi">Quien mueve las piernas mueve el corazon, !Muevete,corazon!</string>
    <string name="level">Nivel</string>
    <string name="tvtimeTotal">4d 03:56:23</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="bar_title_record">Historial</string>
    <string name="orderby_dateZA">Fecha (Recientes primero)</string>
    <string name="orderby_durationZA">Duracion (Mayores primero)</string>
    <string name="orderby_distanceZA">Distancia (Mayores primero)</string>
    <string name="orderby_avgspeedZA">Vel. Prom. (Mayores primero</string>
    <string name="orderby_maxspeedZA">Vel. Max. (Mayores primero)</string>
    <string name="orderby_dataAZ">Fecha (Antiguos primero)</string>
    <string name="orderby_durationAZ">Duracion (Menores primero)</string>
    <string name="orderby_distanceAZ">Distancia (Menores primero)</string>
    <string name="orderby_avgspeedAZ">Vel. Prom. (Menores primero</string>
    <string name="orderby_maxspeedAZ">Vel. Max. (Menores primero)</string>
    <string name="start">Go</string>
    <string name="stop">Stop</string>
    <string name="finish">Finalizar</string>
    <string name="rounds">Round 1</string>
    <string name="time_running">Running Time</string>
    <string name="time_walking">Walking Time</string>
    <string name="walking_clock">00:00</string>
    <string name="init_stop_watch_value">00:00:00</string>
    <string name="hard_volumen">Volumen de Música Cañera</string>
    <string name="soft_volumen">Volumen de Música Tranqui</string>
    <string name="notification_volumen">Volumen de Notificaciones</string>
    <string name="hard_position">00:00:00</string>
    <string name="hard_duration">01:00:00</string>
    <string name="soft_position">00:00:00</string>
    <string name="soft_duration">01:00:00</string>
    <string name="PopUpTotalRuns">Carrera: </string>
    <string name="PopUpTotalDistance">Kms acumulados: </string>
    <string name="PopUpTotalTime">Total time: </string>
    <string name="NoDataWarning">No hay datos registrados. Recuerda activar el GPS si deseas información de tu carrera</string>
    <string name="PopUpDurationTitle">DURACION</string>
    <string name="PopUpChallengeTitle">OBJETIVO</string>
    <string name="PopUpIntervalTitle">INTERVALOS</string>
    <string name="PopUpDistanceTitle">DISTANCIA</string>
    <string name="PopUpAvgSpeedTitle">VELOCIDAD PROMEDIO</string>
    <string name="PopUpMaxSpeedTitle">VELOCIDAD MÁXIMA</string>
    <string name="PopUpUnevennessTitle">DESNIVEL</string>
    <string name="textNull"></string>
    <string name="textNoData">-</string>
    <string name="medalDistanceDescription">Distancia [Record Personal]</string>
    <string name="medalAvgSpeedDescription">Vel. Máx. [Record Personal]</string>
    <string name="medalMaxSpeedDescription">Vel. Prom. [Record Personal]</string>
    <string name="p1">Términos y condiciones</string>
    <string name="p2">¡Bienvenido a HorseChallenge Game!</string>
    <string name="p3">Estos términos y condiciones describen las reglas y regulaciones para el uso del sitio web de Arrap, ubicado en https://luisparra-portafolio.netlify.app/.</string>
    <string name="p4">Al acceder a este sitio web, asumimos que aceptas estos términos y condiciones. No continúes usando Luis Parra si no estás de acuerdo con todos los términos y condiciones establecidos en esta página.</string>
    <string name="p5">Cookies:</string>
    <string name="p6">El sitio web utiliza cookies para ayudar a personalizar tu experiencia en línea. Al acceder a Luis Parra, aceptaste utilizar las cookies necesarias.</string>
    <string name="p7">Una cookie es un archivo de texto que un servidor de páginas web coloca en tu disco duro. Las cookies no se pueden utilizar para ejecutar programas o enviar virus a tu computadora. Las cookies se te asignan de forma exclusiva y solo un servidor web en el dominio que emitió la cookie puede leerlas.</string>
    <string name="p8">Podemos utilizar cookies para recopilar, almacenar y rastrear información con fines estadísticos o de marketing para operar nuestro sitio web. Tienes la capacidad de aceptar o rechazar cookies opcionales. Hay algunas cookies obligatorias que son necesarias para el funcionamiento de nuestro sitio web. Estas cookies no requieren tu consentimiento ya que siempre funcionan. Ten en cuenta que al aceptar las cookies requeridas, también aceptas las cookies de terceros, que podrían usarse a través de servicios proporcionados por terceros si utilizas dichos servicios en nuestro sitio web, por ejemplo, una ventana de visualización de video proporcionada por terceros e integrada en nuestro sitio web.</string>
    <string name="p9">Licencia:</string>
    <string name="p10">A menos que se indique lo contrario, Arrap y/o sus licenciantes poseen los derechos de propiedad intelectual de todo el material en Luis Parra. Todos los derechos de propiedad intelectual son reservados.</string>
    <string name="p11">No debes:</string>
    <string name="p12">Copiar o volver a publicar material de Luis Parra</string>
    <string name="p13">Vender, alquilar o sublicenciar material de Luis Parra</string>
    <string name="p14">Reproducir, duplicar o copiar material de Luis Parra</string>
    <string name="p15">Redistribuir contenido de Luis Parra</string>
    <string name="p16">Este acuerdo comenzará el fecha presente.</string>
    <string name="p17">Partes de este sitio web ofrecen a los usuarios la oportunidad de publicar e intercambiar opiniones e información en determinadas áreas. Arrap no filtra, edita, publica ni revisa los comentarios antes de su presencia en el sitio web. Los comentarios no reflejan los puntos de vista ni las opiniones de Arrap, sus agentes y/o afiliados. Los comentarios reflejan los puntos de vista y las opiniones del individuo que publica sus puntos de vista y opiniones. En la medida en que lo permita la ley aplicable, Arrap no será responsable de los comentarios o de cualquier responsabilidad, daño o gasto causado y/o sufrido como resultado de cualquier uso y/o publicación y/o apariencia de los comentarios en este sitio web.</string>
    <string name="p18">Arrap se reserva el derecho de controlar todos los comentarios y eliminar cualquier comentario que pueda considerarse inapropiado, ofensivo o que incumpla estos términos y condiciones.</string>
    <string name="p19">Tú garantizas y representas que:</string>
    <string name="p20">Tienes derecho a publicar comentarios en nuestro sitio web y tienes todas las licencias y consentimientos necesarios para hacerlo</string>
    <string name="p21">Los comentarios no invaden ningún derecho de propiedad intelectual, incluidos, entre otros, los derechos de autor, patentes o marcas comerciales de terceros</string>
    <string name="p22">Los comentarios no contienen material difamatorio, calumnioso, ofensivo, indecente o ilegal que sea una invasión de la privacidad</string>
    <string name="p23">Los comentarios no se utilizarán para solicitar o promover actividades comerciales o adhesión política o religiosa</string>
    <string name="p24">Sin autorización expresa por escrito de Arrap, no se deben usar productos o servicios para enviar mensajes comerciales no solicitados o de marketing.</string>
    <string name="p25">Hipervínculos a nuestro contenido:</string>
    <string name="p26">Las siguientes organizaciones pueden vincularse a nuestro sitio web sin aprobación previa por escrito:</string>
    <string name="p27">Agencias gubernamentales;</string>
    <string name="p28">Motores de búsqueda;</string>
    <string name="p29">Organizaciones de noticias;</string>
    <string name="p30">Los distribuidores de directorios en línea pueden vincularse a nuestro sitio web de la misma manera que hacen hipervínculos a los sitios web de otras empresas que figuran en la lista; y</string>
    <string name="p31">Empresas acreditadas en todo el sistema, excepto que soliciten organizaciones sin fines de lucro, centros comerciales de caridad y grupos de recaudación de fondos de caridad que no pueden hacer hipervínculos a nuestro sitio web.</string>
    <string name="p32">Estas organizaciones pueden enlazar a nuestra página de inicio, a publicaciones o a otra información del sitio siempre que el enlace: (a) no sea engañoso de ninguna manera; (b) no implique falsamente patrocinio, respaldo o aprobación de la parte vinculante y sus productos y/o servicios; y (c) encaja en el contexto del sitio de la parte vinculante.</string>
    <string name="p33">Podemos considerar y aprobar otras solicitudes de enlaces de los siguientes tipos de organizaciones:</string>
    <string name="p34">fuentes de información de consumidores y/o empresas comúnmente conocidas;</string>
    <string name="p35">sitios de la comunidad .com;</string>
    <string name="p36">asociaciones u otros grupos que representan organizaciones benéficas;</string>
    <string name="p37">distribuidores de directorios en línea;</string>
    <string name="p38">portales de Internet;</string>
    <string name="p39">firmas de contabilidad, derecho y consultoría; y</string>
    <string name="p40">instituciones educativas y asociaciones comerciales.</string>
    <string name="p50">No seremos responsables de ningún contenido que aparezca en tu sitio web. Aceptas protegernos y defendernos contra todas las reclamaciones que se presenten en tu sitio web. Ningún enlace(s) debe aparecer en ningún sitio web que pueda interpretarse como difamatorio, obsceno o criminal, o que infrinja, de otra manera viole o defienda la infracción u otra violación de los derechos de terceros.</string>
    <string name="p51">Reserva de derechos:</string>
    <string name="p52">Nos reservamos el derecho de solicitar que elimines todos los enlaces o cualquier enlace en particular a nuestro sitio web. Apruebas eliminar de inmediato todos los enlaces a nuestro sitio web cuando se solicite. También nos reservamos el derecho de modificar estos términos y condiciones y su política de enlaces en cualquier momento. Al vincular continuamente a nuestro sitio web, aceptas estar vinculado y seguir estos términos y condiciones de vinculación.</string>
</resources>